@@ -149,6 +149,9 @@ Release date: TBA
 
   Closes #4324
 
+* Added the ``super-without-brackets`` checker, raised when a super call is missing its brackets.
+
+  Closes #4008
 
 * Added the ``generate-toml-config`` option.
 
